// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basilisk & karura > karura transfer BSX to basilisk > balance on from chain 1`] = `
{
  "free": 9000000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`basilisk & karura > karura transfer BSX to basilisk > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 973000000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`basilisk & karura > karura transfer BSX to basilisk > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v5": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000000000000,
                },
                "id": {
                  "interior": {
                    "x1": [
                      {
                        "generalIndex": 0,
                      },
                    ],
                  },
                  "parents": 0,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000000000000,
                },
                "id": {
                  "interior": {
                    "x1": [
                      {
                        "generalIndex": 0,
                      },
                    ],
                  },
                  "parents": 0,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 2090,
  },
]
`;

exports[`basilisk & karura > karura transfer BSX to basilisk > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 500000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`basilisk & karura > karura transfer BSX to basilisk > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000000,
          },
          "id": {
            "interior": {
              "X2": [
                {
                  "Parachain": "(rounded 2100)",
                },
                {
                  "GeneralIndex": 0,
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000000,
        },
        "id": {
          "interior": {
            "X2": [
              {
                "Parachain": "(rounded 2100)",
              },
              {
                "GeneralIndex": 0,
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;

exports[`basilisk & karura > karura transfer KSM to basilisk > balance on from chain 1`] = `
{
  "free": 9000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`basilisk & karura > karura transfer KSM to basilisk > balance on to chain 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`basilisk & karura > karura transfer KSM to basilisk > from chain ump messages 1`] = `[]`;

exports[`basilisk & karura > karura transfer KSM to basilisk > route chain xcm events 1`] = `[]`;

exports[`basilisk & karura > karura transfer KSM to basilisk > to chain xcm events 1`] = `[]`;

exports[`basilisk & karura > karura transfer KSM to basilisk > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000,
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000,
        },
        "id": {
          "interior": "Here",
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;
